fixed gap on righthand side

--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,7 @@ html, body{
     height: 100%;
     width: 100%;
     background-color: #f7f7f7;
+    overflow-x: hidden; 
     text-decoration: none;
 }
 
@@ -223,6 +224,7 @@ html, body{
 
   html, body{
     width: 100%;
+    overflow: hidden;
   }
 
   .container{
